v0.9.25: start on mobile main + avoidCache flag

--- a/html/css-custom/custom-m.css
+++ b/html/css-custom/custom-m.css
@@ -9,3 +9,26 @@ body {
 #maindiv {
 	margin: 0 auto;
 }
+
+
+#ViewTypesContentpongIcons_Div, #FeaturesContentpongIcons_Div {
+	width: 970px;
+	padding-left: 10px;
+}
+
+.pongIconViewTypesContent, .pongIconFeaturesContent {
+	width: 240px;	
+	height: 220px;
+	float: left;
+}
+
+#ViewTypesContentpongIcons_Div .pongIconImg, #FeaturesContentpongIcons_Div .pongIconImg{
+	width: 170px;
+	height: 170px;
+	margin-left: 15px;
+}
+
+#ViewTypesContentpongIcons_Div .pongIconLabel, #FeaturesContentpongIcons_Div .pongIconLabel{
+	text-align: center;
+	font-size: 1.4em;
+}
